<resources>
    <string name="app_name">Homework</string>
    <string name="accept">Ok</string>
    <string name="greeting">Привет всем</string>
    <string name="title">Programmer50000</string>
    <string name="textClick">нажмите на картинку</string>
    <string name="btn_add">+</string>
    <string name="btn_sub">-</string>
    <string name="btn_mult">*</string>
    <string name="btn_div">/</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="reset">RESET</string>
    <string name="red">Красный</string>
    <string name="yellow">Жёлтый</string>
    <string name="green">Зелёный</string>
    <string name="hello_world">Hello World</string>
    <string name="ac">AC</string>
    <string name="opened_brace">(</string>
    <string name="closed_brace">)</string>
    <string name="div">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="mult">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="add">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="sub">-</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="back">Back</string>
    <string name="equal">=</string>
</resources>