<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hw28">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/tvInput"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="right"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="right"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:orientation="horizontal"
        android:paddingTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <android.widget.Button
            android:id="@+id/btnAC"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/ac"
            android:textSize="30sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing"/>

        <android.widget.Button
            android:id="@+id/btnOpenedBrace"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/opened_brace"
            android:textSize="30sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing" />

        <android.widget.Button
            android:id="@+id/btnClosedBrace"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/closed_brace"
            android:textSize="30sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing"/>

        <android.widget.Button
            android:id="@+id/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/div"
            android:textSize="30sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing"/>

        <android.widget.Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/_7"
            android:textSize="30sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing"/>

        <android.widget.Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/_8"
            android:textSize="30sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing" />

        <android.widget.Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/_9"
            android:textSize="30sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing" />

        <android.widget.Button
            android:id="@+id/btnMult"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/mult"
            android:textSize="30sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing"/>

        <android.widget.Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/_4"
            android:textSize="20sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing"/>

        <android.widget.Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/_5"
            android:textSize="30sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing"/>

        <android.widget.Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/_6"
            android:textSize="30sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing"/>

        <android.widget.Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/add"
            android:textSize="30sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing"/>

        <android.widget.Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/_1"
            android:textSize="30sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing" />

        <android.widget.Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/_2"
            android:textSize="30sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing"/>

        <android.widget.Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/_3"
            android:textSize="30sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing"/>

        <android.widget.Button
            android:id="@+id/btnSub"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/sub"
            android:textSize="30sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing"/>

        <android.widget.Button
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/dot"
            android:textSize="30sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing" />

        <android.widget.Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/_0"
            android:textSize="30sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing"/>

        <android.widget.Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/back"
            android:textSize="30sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing"/>

        <android.widget.Button
            android:id="@+id/btnEqual"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/equal"
            android:textSize="30sp"
            android:background="@drawable/bg_btn_rectangle_without_spacing"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>