<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hw27">


    <android.widget.Button
        android:id="@+id/btnRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:text="@string/red"
        android:background="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onClickBtn"/>

    <android.widget.Button
        android:id="@+id/btnYellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/yellow"
        android:background="@color/yellow"
        app:layout_constraintEnd_toEndOf="@+id/btnRed"
        app:layout_constraintStart_toStartOf="@+id/btnRed"
        app:layout_constraintTop_toBottomOf="@+id/btnRed"
        android:onClick="onClickBtn" />

    <android.widget.Button
        android:id="@+id/btnGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/green"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="@+id/btnYellow"
        app:layout_constraintStart_toStartOf="@+id/btnYellow"
        app:layout_constraintTop_toBottomOf="@+id/btnYellow"
        android:onClick="onClickBtn" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/hello_world"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btnGreen"
        app:layout_constraintStart_toStartOf="@+id/btnGreen"
        app:layout_constraintTop_toBottomOf="@+id/btnGreen" />


</androidx.constraintlayout.widget.ConstraintLayout>